--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="textMaxDay">Максимум за день: %s</string>
     <string name="textViewDeal">Последняя сделка: %s</string>
     <string name="textViewUpdate">Обновленно: %s</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
